hphp/hack/test/typecheck/function_pointer/obj_get_visibility2.php.exp
File "obj_get_visibility2.php", line 9, characters 12-14:
You cannot access this member (Typing[4112])
File "obj_get_visibility2.php", line 4, characters 20-22:
This member is private
