hphp/hack/test/typecheck/function_pointer/obj_get_visibility2.php
<?hh

final class Foo {
  private function bar(int $x): void {}
}

function baz(): void {
  $x = new Foo();
  $y = $x->bar<>;
  $y(4);
}
